--- a/landing page.html
+++ b/landing page.html
@@ -83,31 +83,31 @@ fitness to the next level, you are at the right place.</b></p>
         <div class="feature">
             <h3>1: Whey Protein</h3>
             <p>Whey protein is a supplement that some people use alongside resistance exercise to help boost muscle protein synthesis and the growth of lean muscle mass</p>
-        <img src="whey.jpg" alt="Girl in a jacket" width="200" height="300">
+        <img src="whey.jpg" alt="whey protein" width="200" height="300">
 <h3><i> Price: $48</i></h3>
 </div>
 <div class="feature">
             <h3>2: Tredmill Machine</h3>
             <p>A treadmill can be a great way to burn calories and help put you in a calorie deficit.</p>
-        <img src="tredmill.jpg" alt="Girl in a jacket" width="200" height="300">
+        <img src="tredmill.jpg" alt="tredmill " width="200" height="300">
 <h3><i> Price: $200</i></h3>
 </div>
 <div class="feature">
             <h3>3: Dumbbell set with Rack</h3>
             <p>this is a set of all the dumbbell set with all kinds of weights.</p>
-        <img src="dumbell.jpg" alt="Girl in a jacket" width="200" height="300">
+        <img src="dumbell.jpg" alt="dumbell set" width="200" height="300">
 <h3><i> Price: $120</i></h3>
 </div>
 <div class="feature">
             <h3>4: Exercise Cycle</h3>
             <p>This product will help you to ride a cycle in your home, and it helps in weight loss.</p>
-        <img src="gymcycle.jpg" alt="Girl in a jacket" width="200" height="300">
+        <img src="gymcycle.jpg" alt="gymcycle" width="200" height="300">
 <h3><i> Price: $240</i></h3>
 </div>
 <div class="feature">
             <h3>5: Yoga Mat</h3>
             <p>this mat is made with pure fibre, it helps in doing exercises on the floor.</p>
-        <img src="yogamat.jpg" alt="Girl in a jacket" width="200" height="300">
+        <img src="yogamat.jpg" alt="yogamat" width="200" height="300">
 <h3><i> Price: $20</i></h3>
 </div>
     </section>
