--- a/landing page.html
+++ b/landing page.html
@@ -27,7 +27,7 @@ header {
     margin-bottom: 30px;
 }
 .bta{
-  background-image: url('gumbo.jpg');
+  background-image: url('./images/backge.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;  
   background-size: cover;
@@ -69,8 +69,8 @@ color:"blue";
 <body>
 <div class="bta">
     <header>
-        <h1><img src="logoe.jpg" alt="Smiley face" style="float:left;width:200px;height:200px;"><u>The Powerhouse</u></h1>
-<h2>Online Gym Store</h2>
+        <h1><img src="./images/logoe.jpg" alt="Smiley face" style="float:left;width:200px;height:200px;"><u><i>The Powerhouse</i></u></h1>
+<h2 style=color:green>Online Gym Store</h2>
 <h5>About us</h5>
         <p><b>The Powerhouse is the best online website for every gym freak, because 
 in this website you will get everything realted to fitness and gym. We have all kinds of
@@ -79,35 +79,35 @@ fitness to the next level, you are at the right place.</b></p>
     </header>
 
     <section class="features">
-        <h2><img src="stare.png" alt="Smiley face" style="float:left;width:30px;height:30px;">Our Most Selling Products :-</h2>
+        <h2><img src="./images/stare.png" alt="Smiley face" style="float:left;width:30px;height:30px;">Our Most Selling Products :-</h2>
         <div class="feature">
             <h3>1: Whey Protein</h3>
             <p>Whey protein is a supplement that some people use alongside resistance exercise to help boost muscle protein synthesis and the growth of lean muscle mass</p>
-        <img src="whey.jpg" alt="whey protein" width="200" height="300">
+        <img src="./images/whey.jpg" alt="Girl in a jacket" width="200" height="300">
 <h3><i> Price: $48</i></h3>
 </div>
 <div class="feature">
             <h3>2: Tredmill Machine</h3>
             <p>A treadmill can be a great way to burn calories and help put you in a calorie deficit.</p>
-        <img src="tredmill.jpg" alt="tredmill " width="200" height="300">
+        <img src="./images/tredmill.jpg" alt="Girl in a jacket" width="200" height="300">
 <h3><i> Price: $200</i></h3>
 </div>
 <div class="feature">
             <h3>3: Dumbbell set with Rack</h3>
             <p>this is a set of all the dumbbell set with all kinds of weights.</p>
-        <img src="dumbell.jpg" alt="dumbell set" width="200" height="300">
+        <img src="./images/dumbell.jpg" alt="Girl in a jacket" width="200" height="300">
 <h3><i> Price: $120</i></h3>
 </div>
 <div class="feature">
             <h3>4: Exercise Cycle</h3>
             <p>This product will help you to ride a cycle in your home, and it helps in weight loss.</p>
-        <img src="gymcycle.jpg" alt="gymcycle" width="200" height="300">
+        <img src="./images/gymcycle.jpg" alt="Girl in a jacket" width="200" height="300">
 <h3><i> Price: $240</i></h3>
 </div>
 <div class="feature">
             <h3>5: Yoga Mat</h3>
             <p>this mat is made with pure fibre, it helps in doing exercises on the floor.</p>
-        <img src="yogamat.jpg" alt="yogamat" width="200" height="300">
+        <img src="./images/yogamat.jpg" alt="Girl in a jacket" width="200" height="300">
 <h3><i> Price: $20</i></h3>
 </div>
     </section>
